Bug 44818 - [GL 3.0 bisected i965]oglc fbo-multisample(negative.blitsizes) regressed
Summary: [GL 3.0 bisected i965]oglc fbo-multisample(negative.blitsizes) regressed
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: All Linux (All)
: high normal
Assignee: Ian Romanick
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 42993
  Show dependency treegraph
 
Reported: 2012-01-15 21:37 UTC by fangxun
Modified: 2012-02-02 21:30 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description fangxun 2012-01-15 21:37:13 UTC
System Environment:
--------------------------
Arch:           i386
Libdrm:         (master)2.4.30-1-g66518ab5653cfdc840cd69e7b653ec05df060584
Mesa:           (master)c82879a071e7df34c51b2170472ca4ca423f5905
Xserver:                (master)xorg-server-1.11.99.901-60-gf9e6858d5c10be6a8439c0f18bfb2325fa0ee070
Xf86_video_intel:  (master)2.17.0-420-g5d5da35c9fab4e7154921861ecbb83befb8840e5
Kernel:    (drm-intel-next) d8e70a254d8f2da141006e496a51502b79115e80

Bug detailed description:
------------------------- 
It fails on Sandybridge and Ironlake.
Below oglc cases also fails:
fbo-multisample(advanced.blit.defaulttomsaa.colorstencil) 
fbo-multisample(advanced.blit.singletomsaa.colordepth) 
fbo-multisample(advanced.blit.singletomsaa.colorstencil)
fbo-multisample(advanced.drawbuffers.singletomsaa)
fbo-multisample(basic.differentFormatNames) 
fbo-multisample(basic.drawpixels.msaatosingle.color) 

Bisect shows 86b7c6707f915b07347070901d602917bc25dd0f is the first bad commit.
commit 86b7c6707f915b07347070901d602917bc25dd0f
Author:     Eric Anholt <eric@anholt.net>
AuthorDate: Wed Jan 11 13:54:53 2012 -0800
Commit:     Eric Anholt <eric@anholt.net>
CommitDate: Thu Jan 12 12:34:15 2012 -0800

    mesa: Throw the required error for glReadPixels() from a multisampled FBO.

    Fixes piglit EXT_framebuffer_multisample-negative-readpixels.

    Reviewed-by: Brian Paul <brianp@vmware.com>
    NOTE: This is a candidate for the 8.0 branch.


Reproduce steps:
----------------
1. start X
2. ./oglconform -z -s -suite all -v 2  -test fbo-multisample negative.blitsizes
Comment 1 fangxun 2012-01-18 00:54:53 UTC
It also happens on mesa 8.0 branch.
Comment 2 Eric Anholt 2012-01-18 16:46:20 UTC
This is due to a sw fallback in BlitFramebuffer due to the stub implementation of multisample we have currently.
Comment 3 Ian Romanick 2012-01-20 16:12:05 UTC
I've just posted a patch to the mesa-dev list that should fix this bug.

http://lists.freedesktop.org/archives/mesa-dev/2012-January/017848.html
Comment 4 Ian Romanick 2012-02-01 08:25:37 UTC
Fixed on 8.0 branch by:

commit 7f5d3f7ed2ac42f00e4f848dd79b6223d95d7877
Author: Ian Romanick <ian.d.romanick@intel.com>
Date:   Fri Jan 20 16:08:01 2012 -0800

    meta: Fallback for glBlitFramebuffer from a multisample surface
    
    NOTE: This is a candidate for the 8.0 branch.
    
    Signed-off-by: Ian Romanick <ian.d.romanick@intel.com>
    Reviewed-by: Eric Anholt <eric@anholt.net>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=44818
    (cherry picked from commit b48d4b64e97f48dcf0aef1b6f7bc333c309cc183)
Comment 5 fangxun 2012-02-02 21:30:52 UTC
Verified with mesa 8.0 7f5d3f7ed and master 15986d21e.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.